Test/senamic_test/zzm_test/test9.output
Error type 16 at Line 7: Duplicated name struct "sa"
Error type 14 at Line 14: Non-existent field "b"
Error type 5 at Line 14: Type mismatched for assignment "="
